apps/base/n8n/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: apps
  annotations:
    # Annotations for Homepage Service Discovery
    gethomepage.dev/enabled: "false"
    gethomepage.dev/group: "Automation"
    gethomepage.dev/name: "n8n"
    gethomepage.dev/icon: "n8n.png"
    gethomepage.dev/description: "Automation Platform"
    # Annotations for NGINX
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - n8n.k8s.local
    - n8n.192.168.8.40.nip.io
  rules:
  - host: n8n.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 5678
  - host: n8n.192.168.8.40.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 5678
